Fix ads layout bug with @media

--- a/01/fonts.css
+++ b/01/fonts.css
@@ -82,19 +82,54 @@ body {
 }
 .navbar__item {
   font-size: 18px;
+  font-weight: 800;
 }
 .items__item {
   font-size: 16px;
+  font-weight: 600;
+}
+.article__date {
+  font-size: 14px;
+  font-weight: 300; font-style: italic;
+}
+.article__h1 {
+  font-size: 24px;
+  font-weight: 600;
+}
+.article__p {
+  font-weight: 500;
+}
+.photo__description {
+  font-style: italic;
+}
+.article__author {
+  font-style: italic;
+  font-weight: 700;
 }
 
+.comment__date {
+  font-weight: 300; font-style: italic;
+}
 @media (min-width: 992px) {
   body {
     font-size: 20px;
+  }
+  .article__date {
+    font-size: 18px;
+  }
+  .article__h1 {
+    font-size: 32px;
   }
 }
 
 @media (min-width: 1400px) {
   body {
     font-size: 24px;
+  }
+  .article__date {
+    font-size: 24px;
+  }
+  .article__h1 {
+    font-size: 48px;
   }
 }
